[package]
name = "log-store_extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"
lambda-extension = "0.8"
# the same versions that are used in lambda-extension, are used here
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "net", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
